# rcol

./: .env  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  tutorial.py  tutorial_custom_instruments.py  tutorial_existing_instruments.py  tutorial_existing_instruments_rtg.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-docs.yml
docs/: getting-started.md  index.md  instruments.md
docs/instruments/: general.md  index.md  rtg.md
docs/setup/: account.md  api-key.md  index.md  project.md  python-setup.md  survey-mode.md  troubleshooting.md  upload-instruments.md
docs/stylesheets/: extra.css
rcol/: template.py
src/: __init__.py  instruments.py  upload.py
src/rcol/: instruments.py  rtg.py  templates.py
src/redcap_templates/: __init__.py  stack.py  templates.py  upload.py
tests/: test_template.py  test_templates.py
