[project]
name = "rcol"
version = "0.5.0"
description = "Pandas DataFrame templates for REDCap instruments, with stacking and upload functionality."
authors = [
    { name = "Julius Welzel", email = "julius.welzel@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "pandas>=1.5.0",
    "pycap>=0.0.1",
]

[project.optional-dependencies]
develop = [
    "pytest"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    ".",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"