[project]
name = "rcol"
version = "0.0.2"
description = "Pandas DataFrame templates for REDCap instruments, with stacking and upload functionality."
authors = [
    { name = "Julius Welzel", email = "julius.welzel@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "pandas>=1.5.0",
    "PyCap>=2.0.0",
    "ipykernel>=6.29.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rcol"]
